RESOLVED FIXED97838
JSC: fix broken non-JIT build.
https://bugs.webkit.org/show_bug.cgi?id=97838
Summary JSC: fix broken non-JIT build.
Mark Lam
Reported 2012-09-27 18:18:23 PDT
http://trac.webkit.org/changeset/129774 placed initializeHostCallReturnValue() behind ENABLE(JIT), but did not update JSGlobalData.cpp to reflect this. This breaks non JIT builds.
Attachments
Fix. (1.20 KB, patch)
2012-09-27 18:22 PDT, Mark Lam
sullivan: review+
Mark Lam
Comment 1 2012-09-27 18:22:20 PDT
Mark Lam
Comment 2 2012-09-27 18:44:18 PDT
Note You need to log in before you can comment on or make changes to this bug.