Put initializeHostCallReturnValue() behind #if ENABLE(JIT). Fixes non JIT builds. https://bugs.webkit.org/show_bug.cgi?id=97838.

Reviewed by John Sullivan.

* runtime/JSGlobalData.cpp:
(JSC::JSGlobalData::JSGlobalData):



Canonical link: https://commits.webkit.org/115838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129830 268f45cc-cd09-0410-ab3c-d52691b4dbfc